[gd_scene load_steps=22 format=3 uid="uid://dku3gh3thbcuj"]

[ext_resource type="Texture2D" uid="uid://crrlrsdp2cbu5" path="res://Assets/Images/SE-MenuBg.png" id="1_edoq2"]
[ext_resource type="Script" path="res://Scripts/Menus/choose_control_layout.gd" id="1_i1vmn"]
[ext_resource type="Texture2D" uid="uid://b2ah0jmcv6l8y" path="res://Assets/Sprites/Instructions/8.png" id="2_j2ls0"]
[ext_resource type="FontFile" uid="uid://dh1or6jgu5dia" path="res://Assets/Text Fonts/Gameplay.ttf" id="3_yljv2"]
[ext_resource type="FontFile" uid="uid://dyd80n3v81nhl" path="res://Assets/Text Fonts/AldotheApache.ttf" id="4_ntart"]
[ext_resource type="Texture2D" uid="uid://d1mj5xwf5agni" path="res://Assets/Sprites/Instructions/9.png" id="5_xaq1i"]
[ext_resource type="PackedScene" uid="uid://cd2kmfycbf3i8" path="res://Scenes/Options Menu/options_tab_menu.tscn" id="7_3h2a8"]
[ext_resource type="StyleBox" uid="uid://cq7n5xmwaqnqx" path="res://Styles/ButtonHover.tres" id="8_kt7fp"]
[ext_resource type="StyleBox" uid="uid://cnhmoydrn3voe" path="res://Styles/ButtonPressed.tres" id="9_54uor"]
[ext_resource type="StyleBox" uid="uid://cwtsu02gqa0h1" path="res://Styles/ButtonNormal.tres" id="10_vcnes"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ujaaq"]
texture = ExtResource("1_edoq2")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6884p"]
bg_color = Color(0, 0, 0, 0.788235)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f36u6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kyfy7"]
bg_color = Color(0.976471, 0.878431, 0.866667, 0.4)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d6fvn"]
bg_color = Color(0.996078, 0.972549, 0.968627, 0.584314)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5174d"]
bg_color = Color(0.670588, 0.290196, 0.278431, 0)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h81y1"]
bg_color = Color(0, 0, 0, 0.788235)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jp01g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i4nsl"]
bg_color = Color(0.980392, 0.901961, 0.894118, 0.368627)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k1527"]
bg_color = Color(1, 1, 1, 0.682353)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mw8ai"]
bg_color = Color(0.670588, 0.290196, 0.278431, 0)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i1vmn")

[node name="Bg" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ujaaq")

[node name="DefaultPanel" type="Panel" parent="Bg"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.077
anchor_top = 0.145
anchor_right = 0.077
anchor_bottom = 0.145
offset_left = 0.29599
offset_top = 55.04
offset_right = 453.296
offset_bottom = 511.04
theme_override_styles/panel = SubResource("StyleBoxFlat_6884p")

[node name="TextureRect" type="TextureRect" parent="Bg/DefaultPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.498
anchor_top = 0.304
anchor_right = 0.498
anchor_bottom = 0.304
offset_left = -208.594
offset_top = -117.624
offset_right = 208.406
offset_bottom = 117.376
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_j2ls0")
expand_mode = 2

[node name="DefaultBtn" type="Button" parent="Bg/DefaultPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.51
anchor_top = 0.718
anchor_right = 0.51
anchor_bottom = 0.718
offset_left = -230.03
offset_top = -326.408
offset_right = 220.97
offset_bottom = 130.592
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_yljv2")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_f36u6")
theme_override_styles/hover = SubResource("StyleBoxFlat_kyfy7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_d6fvn")
theme_override_styles/normal = SubResource("StyleBoxFlat_5174d")

[node name="KeyboardLbl" type="Label" parent="Bg/DefaultPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.51
anchor_top = 0.791
anchor_right = 0.51
anchor_bottom = 0.791
offset_left = -165.03
offset_top = -72.696
offset_right = 164.97
offset_bottom = 72.304
theme_override_fonts/font = ExtResource("4_ntart")
theme_override_font_sizes/font_size = 60
text = "Default 
Controls"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CustomPanel" type="Panel" parent="Bg"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.542
anchor_top = 0.145
anchor_right = 0.542
anchor_bottom = 0.145
offset_left = -0.384033
offset_top = 54.04
offset_right = 464.616
offset_bottom = 511.04
theme_override_styles/panel = SubResource("StyleBoxFlat_h81y1")

[node name="TextureRect" type="TextureRect" parent="Bg/CustomPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.498
anchor_top = 0.304
anchor_right = 0.498
anchor_bottom = 0.304
offset_left = -208.594
offset_top = -117.624
offset_right = 208.406
offset_bottom = 117.376
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_xaq1i")
expand_mode = 2

[node name="CustomBtn" type="Button" parent="Bg/CustomPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.725
anchor_right = 0.5
anchor_bottom = 0.725
offset_left = -231.5
offset_top = -330.325
offset_right = 233.5
offset_bottom = 125.675
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_yljv2")
theme_override_font_sizes/font_size = 45
theme_override_styles/focus = SubResource("StyleBoxEmpty_jp01g")
theme_override_styles/hover = SubResource("StyleBoxFlat_i4nsl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_k1527")
theme_override_styles/normal = SubResource("StyleBoxFlat_mw8ai")

[node name="KeyboardLbl" type="Label" parent="Bg/CustomPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.739
anchor_right = 0.5
anchor_bottom = 0.739
offset_left = -192.5
offset_top = -35.723
offset_right = 196.5
offset_bottom = 35.277
theme_override_fonts/font = ExtResource("4_ntart")
theme_override_font_sizes/font_size = 60
text = "Custom 
Controls"
horizontal_alignment = 1
vertical_alignment = 1

[node name="options_tab" parent="." instance=ExtResource("7_3h2a8")]
visible = false
offset_left = 3.0
offset_right = 3.0

[node name="BackBtn" type="Button" parent="options_tab"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 566.0
offset_right = 212.0
offset_bottom = 641.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_ntart")
theme_override_font_sizes/font_size = 60
theme_override_styles/hover = ExtResource("8_kt7fp")
theme_override_styles/pressed = ExtResource("9_54uor")
theme_override_styles/normal = ExtResource("10_vcnes")
text = "BACK
"

[node name="ConfirmBtn" type="Button" parent="options_tab"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 886.0
offset_top = 565.0
offset_right = 1136.0
offset_bottom = 640.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_ntart")
theme_override_font_sizes/font_size = 60
theme_override_styles/hover = ExtResource("8_kt7fp")
theme_override_styles/pressed = ExtResource("9_54uor")
theme_override_styles/normal = ExtResource("10_vcnes")
text = "CONRIRM
"

[node name="ChooseAController" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.513
anchor_right = 0.513
offset_left = -387.976
offset_top = 23.0
offset_right = 387.024
offset_bottom = 99.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_yljv2")
theme_override_font_sizes/font_size = 40
text = "- Choose a Keyboard Layout -"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Bg/DefaultPanel/DefaultBtn" to="." method="_on_default_btn_pressed"]
[connection signal="pressed" from="Bg/CustomPanel/CustomBtn" to="." method="_on_custom_btn_pressed"]
[connection signal="pressed" from="options_tab/BackBtn" to="." method="_on_back_btn_pressed"]
[connection signal="pressed" from="options_tab/ConfirmBtn" to="." method="_on_confirm_btn_pressed"]
